<resources>
    <string name="app_name">致卓纸板生管系统</string>

    <string name="menu_option_refresh">刷新</string>
    <string name="menu_option_change">切换</string>

    <string name="dialog_title">请输入您的工厂名称</string>
    <string name="dialog_title_change_refresh">请输入刷新频率(秒)</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="query">查询</string>

    <string name="toast_refresh_success">刷新成功</string>
    <string name="toast_error">出错了,请重试</string>
    <string name="toast_error_format">数据格式有误</string>
    <string name="toast_input">请输入正确的名称</string>

    <string name="history_data">历史数据</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_factory">请输入厂家名称</string>

    <string name="login">登录</string>

    <string name="order">订单信息</string>
    <string name="order_detail">订单详情</string>

    <string name="finish_data">完工资料</string>
    <string name="finish_data_detail">完工资料详情</string>

    <string name="search_order">搜索订单</string>
    <string name="search_hint">请输入订单号、客户名称或者切长</string>

    <string name="group">一号线</string>
    <string name="search">搜\t\t\t索</string>
    <string name="search_order_result">订单搜索结果</string>
    <string name="search_finish_info_result">完工资料搜索结果</string>

    <string name="search_finish_info">搜索完工资料</string>

    <string name="start_time">开始时间</string>
    <string name="finish_time">完工时间</string>

    <string name="men_fu">门幅</string>
    <string name="cai_zhi">材质</string>
</resources>
