<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.papermanagement.activity.SearchFinishInfoActivity">

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorMain"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/search_finish_info"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/rl_1"
        android:padding="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/et_search_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:textSize="14sp"/>

        <Spinner
            android:id="@+id/spinner_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/btn_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSelectStartDate"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorMain"
                android:textSize="14sp"
                android:gravity="start"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

            <Button
                android:id="@+id/btn_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSelectStartTime"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorMain"
                android:textSize="14sp"
                android:gravity="start"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_time"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/btn_finish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSelectFinishDate"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorMain"
                android:textSize="14sp"
                android:gravity="start"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>

            <Button
                android:id="@+id/btn_finish_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSelectFinishTime"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorMain"
                android:textSize="14sp"
                android:gravity="start"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <Button
            android:text="@string/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSearchOrder"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorMain"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/BlueProgressBar"
        android:visibility="invisible"/>
</RelativeLayout>
